create card on ProductComponent

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,65 @@
-<p>products works!</p>
+<app-header title="Products" subtitle="All available Products in our store" button="view-cart"></app-header>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <img src="https://picsum.photos/200/300" alt="test">
+                    <p></p>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="money">800 USD</p>
+                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-warning">Order now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <img src="https://picsum.photos/200/300" alt="test">
+                    <p></p>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="money">800 USD</p>
+                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-warning">Order now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <img src="https://picsum.photos/200/300" alt="test">
+                    <p></p>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="money">800 USD</p>
+                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-warning">Order now</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <img src="https://picsum.photos/200/300" alt="test">
+                    <p></p>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="money">800 USD</p>
+                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-warning">
+                        <i class="fas fa-shopping-cart"></i>
+                        Order now
+                    </a>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
