--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@ background-color: rgb(238, 238, 238);
         <span class="lead">{{ subtitle }}</span>
       </div>
       <div class="col text-right">
-        <button *ngIf="button === 'logout'" type="button" style="margin-top: 30px;" class="btn btn-danger"
+        <button *ngIf="button === 'logout' else button === 'login'" type="button" style="margin-top: 30px;" class="btn btn-danger"
           (click)='onLogout()'>
           logout
         </button>
