--- a/src/app/add-procduct/add-procduct.component.html
+++ b/src/app/add-procduct/add-procduct.component.html
@@ -1,1 +1,82 @@
-<p>add-procduct works!</p>
+<app-header title="Products" subtitle="Add product" button="logout"></app-header>
+<main>
+    <div class="container">
+        <p style="font-size: 25px;">Add new product</p>
+        <div class="row">
+            <div class="col-8">
+                <form class="border border-dark" style="padding: 1% 1% 1% 6%;">
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Product Name</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="#" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Unit Price</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="#" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Units In Stock</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="#" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Description</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="#" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Manufacturer</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="#" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Category</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="#" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Category</label>
+                        <div class="col-sm-9 row" style="padding-left: 4%;">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                    value="option1">
+                                <label class="form-check-label" for="inlineRadio1">New</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                    value="option2">
+                                <label class="form-check-label" for="inlineRadio2">Old</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                                    value="option3">
+                                <label class="form-check-label" for="inlineRadio3">Refurbished</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="staticEmail" class="col-sm-3 col-form-label">Product Image File</label>
+                        <div class="col-sm-9">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="inputGroupFile01"
+                                    aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Product</button>
+                </form>
+            </div>
+            <div class="col-4">
+                <img src="https://picsum.photos/200/300" alt="test" />
+            </div>
+        </div>
+    </div>
+</main>
