--- a/src/app/add-procduct/add-procduct.component.html
+++ b/src/app/add-procduct/add-procduct.component.html
@@ -26,9 +26,11 @@
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-3 col-form-label">Description</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="#" />
+                            <input type="text" class="form-control" id="#" style="height: 200%;" />
                         </div>
                     </div>
+                    <br/>
+                    <br/>
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-3 col-form-label">Manufacturer</label>
                         <div class="col-sm-9">
@@ -71,7 +73,10 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Add Product</button>
+                    <div class="d-flex justify-content-start">
+                        <button type="submit" class="btn btn-primary mx-1">Add Product</button>
+                        <button type="submit" class="btn btn-danger mx-1">Back</button>
+                    </div>
                 </form>
             </div>
             <div class="col-4">
