--- a/src/app/details-product/details-product.component.html
+++ b/src/app/details-product/details-product.component.html
@@ -4,6 +4,13 @@
         <div class="row">
             <div class="col-1">
             </div>
+            <!-- <div class="col-5" style="
+            background-image: url(https://picsum.photos/200/300);
+            height: auto;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            "> -->
             <div class="col-5">
                 <img src="https://picsum.photos/200/300" alt="test" style="width: 100%; height: 50%;" />
             </div>
@@ -37,7 +44,7 @@
                         Category:
                     </p>
                     <p class="col-sm-2">
-                       <a href="#">Apple</a>
+                        <a href="#">Apple</a>
                     </p>
                 </div>
                 <div class="row">
@@ -45,14 +52,15 @@
                         Availble units in stock:
                     </p>
                     <p style="align-self: flex-end;" class="col-sm-2">
-                       800
+                        800
                     </p>
                 </div>
                 <label for="" style="font-size: xx-large;">
                     1099 USD
                 </label>
                 <div class="row col-sm-5">
-                    <button type="submit" class="btn btn-success mx-1 text-white"><i class="fas fa-arrow-circle-left"></i>back</button>
+                    <button type="submit" class="btn btn-success mx-1 text-white"><i
+                            class="fas fa-arrow-circle-left"></i>back</button>
                     <button type="submit" class="btn btn-warning mx-1 text-white">Orther Now</button>
                 </div>
             </div>
