final design details-product.component

--- a/src/app/details-product/details-product.component.html
+++ b/src/app/details-product/details-product.component.html
@@ -12,7 +12,7 @@
             background-size: cover;
             "> -->
             <div class="col-5">
-                <img src="https://picsum.photos/200/300" alt="test" style="width: 100%; height: 50%;" />
+                <img src="https://picsum.photos/200/300" alt="test" style="width: 100%; height: 40%;" />
             </div>
             <div class="col-5">
                 <h4>Iphone X</h4>
@@ -59,8 +59,10 @@
                     1099 USD
                 </label>
                 <div class="row col-sm-5">
-                    <button type="submit" class="btn btn-success mx-1 text-white"><i
+                    <a href="">
+                        <button type="submit" class="btn btn-success mx-1 text-white"><i
                             class="fas fa-arrow-circle-left"></i>back</button>
+                    </a>
                     <button type="submit" class="btn btn-warning mx-1 text-white">Orther Now</button>
                 </div>
             </div>
