--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -10,7 +10,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">800 USD</p>
-                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="detailsProduct" class="card-link btn btn-primary">Detail</a>
                     <a href="#" class="card-link btn btn-warning">Order now</a>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">800 USD</p>
-                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="detailsProduct" class="card-link btn btn-primary">Detail</a>
                     <a href="#" class="card-link btn btn-warning">Order now</a>
                 </div>
             </div>
