--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,8 +17,8 @@ background-color: rgb(238, 238, 238);
         </button>
         <button *ngIf="button === 'view-cart'" type="button" style="margin-top: 30px;" class="btn btn-light"
           routerLink="/cart">
-          <i class="fas fa-shopping-cart" style="transform: rotateY(180deg) !important;"></i>
-          view cart
+          <fa-icon [icon]="faShoppingCart"></fa-icon>
+          View cart
         </button>
       </div>
     </div>
