--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -11,7 +11,10 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">800 USD</p>
-                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-primary">
+                        <fa-icon [icon]="faInfoCircle"></fa-icon>
+                        Detail
+                    </a>
                     <a href="#" class="card-link btn btn-warning">
                         <fa-icon [icon]="faShoppingCart"></fa-icon>
                         Order now</a>
@@ -28,7 +31,10 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">800 USD</p>
-                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-primary">
+                        <fa-icon [icon]="faInfoCircle"></fa-icon>
+                        Detail
+                    </a>
                     <a href="#" class="card-link btn btn-warning">
                         <fa-icon [icon]="faShoppingCart"></fa-icon>
                         Order now</a>
@@ -45,7 +51,10 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">800 USD</p>
-                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-primary">
+                        <fa-icon [icon]="faInfoCircle"></fa-icon>
+                        Detail
+                    </a>
                     <a href="#" class="card-link btn btn-warning">
                         <fa-icon [icon]="faShoppingCart"></fa-icon>
                         Order now</a>
@@ -62,7 +71,10 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">800 USD</p>
-                    <a href="#" class="card-link btn btn-primary">Detail</a>
+                    <a href="#" class="card-link btn btn-primary">
+                        <fa-icon [icon]="faInfoCircle"></fa-icon>
+                        Detail
+                    </a>
                     <a href="#" class="card-link btn btn-warning">
                         <fa-icon [icon]="faShoppingCart"></fa-icon>
                         Order now
