--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,7 @@ background-color: rgb(238, 238, 238);
       <div class="col text-right">
         <button *ngIf="button === 'logout' else button === 'login'" type="button" style="margin-top: 30px;" class="btn btn-danger"
           (click)='onLogout()'>
+          <fa-icon [icon]="faSignOutAlt"></fa-icon>
           logout
         </button>
         <button *ngIf="button === 'view-cart'" type="button" style="margin-top: 30px;" class="btn btn-light"
@@ -20,6 +21,7 @@ background-color: rgb(238, 238, 238);
           <fa-icon [icon]="faShoppingCart"></fa-icon>
           View cart
         </button>
+
       </div>
     </div>
   </div>
