--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -64,4 +64,11 @@
 
     </tr>
   </table>
+  
+  <div>
+      <button class="btn btn-success">
+        <fa-icon [icon]="faArrowCircleLeft"></fa-icon>
+        Continue shopping
+      </button>
+  </div>
 </div>
