call API product

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -2,15 +2,17 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-sm">
+
+
+        <div *ngFor="let data of listProduct;" class="col-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">{{data.productName}}</h5>
                     <img src="https://picsum.photos/200/300" alt="test">
                     <p></p>
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="money">800 USD</p>
+                    <p class="money">{{data.price}} USD</p>
                     <a href="detailsProduct" class="card-link btn btn-primary">
                         <fa-icon [icon]="faInfoCircle"></fa-icon>
                         Detail
@@ -20,68 +22,12 @@
                         Order now</a>
                 </div>
             </div>
+            
         </div>
 
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <img src="https://picsum.photos/200/300" alt="test">
-                    <p></p>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="money">800 USD</p>
-                    <a href="detailsProduct" class="card-link btn btn-primary">
-                        <fa-icon [icon]="faInfoCircle"></fa-icon>
-                        Detail
-                    </a>
-                    <a href="#" class="card-link btn btn-warning">
-                        <fa-icon [icon]="faShoppingCart"></fa-icon>
-                        Order now</a>
-                </div>
-            </div>
-        </div>
 
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <img src="https://picsum.photos/200/300" alt="test">
-                    <p></p>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="money">800 USD</p>
-                    <a href="detailsProduct" class="card-link btn btn-primary">
-                        <fa-icon [icon]="faInfoCircle"></fa-icon>
-                        Detail
-                    </a>
-                    <a href="#" class="card-link btn btn-warning">
-                        <fa-icon [icon]="faShoppingCart"></fa-icon>
-                        Order now</a>
-                </div>
-            </div>
-        </div>
 
-        <div class="col-sm">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <img src="https://picsum.photos/200/300" alt="test">
-                    <p></p>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <p class="money">800 USD</p>
-                    <a href="detailsProduct" class="card-link btn btn-primary">
-                        <fa-icon [icon]="faInfoCircle"></fa-icon>
-                        Detail
-                    </a>
-                    <a href="#" class="card-link btn btn-warning">
-                        <fa-icon [icon]="faShoppingCart"></fa-icon>
-                        Order now
-                    </a>
-                </div>
-            </div>
-        </div>
+
         
     </div>
 </div>
