--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,3 +1,10 @@
-.card{
-    margin: 2% 2% 2% 2%;
+.container-fuild{
+    padding-left: 12%;
+    padding-right: 12%;
+}
+.row{
+    justify-content: space-between;
+}
+.col-3{
+    margin-bottom: 1%;
 }
