--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,17 +1,14 @@
 <app-header title="Products" subtitle="All available Products in our store" button="view-cart"></app-header>
-<div class="container">
+<div class="container-fuild">
     <div class="row">
-
-
-
-        <div *ngFor="let data of listProduct;" class="col-3">
-            <div class="card" style="width: 18rem;">
+        <div *ngFor="let data of listProduct;" class="col-3 d-flex justify-content-center">
+            <div class="card" style="width: 18em;">
                 <div class="card-body">
                     <h5 class="card-title">{{data.productName}}</h5>
                     <img src="https://picsum.photos/200/300" alt="test">
                     <p></p>
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text text-justify">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <p class="money">{{data.price}} USD</p>
                     <a href="detailsProduct" class="card-link btn btn-primary">
                         <fa-icon [icon]="faInfoCircle"></fa-icon>
@@ -22,12 +19,6 @@
                         Order now</a>
                 </div>
             </div>
-            
         </div>
-
-
-
-
-        
     </div>
 </div>
