--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -66,9 +66,11 @@
   </table>
   
   <div>
+    <a href="/">
       <button class="btn btn-success">
         <fa-icon [icon]="faArrowCircleLeft"></fa-icon>
         Continue shopping
       </button>
+    </a>
   </div>
 </div>
