--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@ background-color: rgb(238, 238, 238);
         <button *ngIf="button === 'view-cart'" type="button" style="margin-top: 30px;" class="btn btn-light">
           <a routerLink="/cart">
             <fa-icon [icon]="faShoppingCart"></fa-icon>
-            View cart
+            View cart <span class="badge badge-secondary">{{count}}</span>
           </a>
         </button>
 
