--- a/src/app/details-product/details-product.component.html
+++ b/src/app/details-product/details-product.component.html
@@ -15,20 +15,16 @@
                 <img src="https://picsum.photos/200/300" alt="test" style="width: 100%; height: 40%;" />
             </div>
             <div class="col-5">
-                <h4>Iphone X</h4>
+                <h4>{{productName}}</h4>
                 <p class="text-justify">
-                    A smartphone is a handhled personal computer with a mobile operating system and an integrated mobile
-                    broadband
-                    cellular network connection for voice, SMS, and internet data communication; most, if not all,
-                    smartphones also
-                    support Wi-Fi
+                    {{description}}
                 </p>
                 <div class="row">
                     <p class="col-sm-2" style="font-weight: bold;">
                         Item Code:
                     </p>
                     <p class="text-white bg-warning col-sm-2" style="font-size: small; align-self: center;">
-                        1526440382825
+                        {{id}}
                     </p>
                 </div>
                 <div class="row">
@@ -36,7 +32,7 @@
                         Manufacturer:
                     </p>
                     <p class="col-sm-2">
-                        Apple
+                        {{manufacturer}}
                     </p>
                 </div>
                 <div class="row">
@@ -52,11 +48,11 @@
                         Availble units in stock:
                     </p>
                     <p style="align-self: flex-end;" class="col-sm-2">
-                        800
+                        {{unitInStock}}
                     </p>
                 </div>
                 <label for="" style="font-size: xx-large;">
-                    1099 USD
+                    {{unitPrice}} USD
                 </label>
                 <div class="row col-sm-5">
                     <a href="">
