--- a/src/app/details-product/details-product.component.html
+++ b/src/app/details-product/details-product.component.html
@@ -1,4 +1,4 @@
-<app-header title="Products" subtitle="More infomation" button=""></app-header>
+<app-header title="Products" subtitle="More infomation" button="view-cart"></app-header>
 <main>
     <div class="container-fluid">
         <div class="row">
@@ -57,9 +57,9 @@
                 <div class="row col-sm-5">
                     <a href="">
                         <button type="submit" class="btn btn-success mx-1 text-white"><i
-                            class="fas fa-arrow-circle-left"></i>back</button>
+                            class="fas fa-arrow-circle-left" ></i>back</button>
                     </a>
-                    <button type="submit" class="btn btn-warning mx-1 text-white">Orther Now</button>
+                    <button (click)=" addToCartFromProduct()" type="submit" class="btn btn-warning mx-1 text-white">Orther Now</button>
                 </div>
             </div>
             <div class="col-1">
