--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,5 @@
-<app-header title="Products" subtitle="All available Products in our store" button="view-cart" count={{totalProducts}}></app-header>
-
-<app-upload-image></app-upload-image>
 <app-header title="Mobile Store" subtitle="All available Products in our store" btnlogout="" btnlogin="login" button="view-cart" count={{totalProducts}}></app-header>
+<!-- <app-upload-image></app-upload-image> -->
 <div class="container-fuild">
     <div class="row">
         <div *ngFor="let data of listProduct;" class="col-3 d-flex justify-content-center">
